added function decl and application evaluaton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ include_directories(include)
 find_package(GMP REQUIRED)
 find_package(MPFR REQUIRED)
 
+find_package(LLVM REQUIRED CONFIG)
+
 add_subdirectory(deps/utfcpp)
 add_subdirectory(deps/fmt)
 
@@ -37,13 +39,18 @@ set(
 	src/Type.cpp
 	src/Parser.cpp
 	src/Eval.cpp
+	src/Compiler.cpp
+
+	src/llvm.cpp
 )
+
+llvm_map_components_to_libnames(llvm_libs support core orcjit irreader)
 
 add_library(ilang-base ${ILANG_BASE_HEADERS} ${ILANG_BASE_SOURCE})
 
 target_include_directories(ilang-base PUBLIC include)
-target_include_directories(ilang-base PRIVATE deps/GSL/include ${GMP_INCLUDES} ${MPFR_INCLUDES})
-target_link_libraries(ilang-base utf8cpp fmt ${GMP_LIBRARIES} ${MPFR_LIBRARIES})
+target_include_directories(ilang-base PRIVATE deps/GSL/include ${GMP_INCLUDES} ${MPFR_INCLUDES} ${LLVM_INCLUDE_DIRS})
+target_link_libraries(ilang-base utf8cpp fmt asmjit ${GMP_LIBRARIES} ${MPFR_LIBRARIES} ${llvm_libs})
 
 install(
 	FILES ${ILANG_BASE_HEADERS}
